# montrs

./: .prdoc.toml  AGENTS.md  Cargo.toml  README.md  mise.toml  prdoc.md  rust-toolchain.toml  rustfmt.toml
.agent/: agent.json  error_tracking.json  tools.json
.agent/rules/: app-developer.md  framework-contributor.md
.github/workflows/: ci.yml  prdoc.yml  release.yml
.trae/rules/: app-developer.md  framework-contributor.md
docs/: index.md
docs/LICENSES/headers/: HEADER-MIT-APACHE
docs/agent/: agentic-workflows.md  app-developer-prompt.md  appspec.md  doc-linting-checklist.md  framework-contributor-prompt.md  index.md  metadata.md  onboarding.md  prompt-usage.md  skills.md  spec.md
docs/agent/workflows/: adding-features.md  prdoc-generation.md
docs/architecture/: overview.md  packages.md  philosophy.md
docs/community/: contributing.md  packages-contribution.md
docs/contributor/: prdoc.md
docs/core/: validator.md
docs/getting-started/: first-30-minutes.md  golden-path.md  introduction.md
docs/guides/: common-mistakes.md
docs/haptics/: overview.md
docs/orm/: index.md
docs/tooling/: cli.md
prdoc/: pr_83.prdoc  schema_user.json
scripts/: apply_headers.py
skills/database-setup/: skill.toml
skills/deployment/: skill.toml
skills/haptics/: skill.toml
skills/testing/: skill.toml
templates/changelog/: audience.md.tera  summary.md.tera
templates/default/: mise.toml  montrs.toml
templates/prdoc/: .template.prdoc  prdoc.md
templates/todo/: Cargo.toml  README.md  mise.toml
templates/todo/src/: main.rs
(+6 files in other folders)
